--- a/installIPA.plist
+++ b/installIPA.plist
@@ -1,18 +1,48 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
-<key>kind</key>
-<string>software-package</string>
-<key>url</key>
-<string>http://zhuoyuehd.oss-cn-shenzhen.aliyuncs.com/apk/ylg1120-resigned.ipa</string>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>http://zhuoyuehd.oss-cn-shenzhen.aliyuncs.com/apk/ylg1120-resigned.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>http://xxxxxxxxxxxxxxxxxx.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>http://xxxxxxxxxxxxxxxxxx.png</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.xxxx.demo</string>
+				<key>bundle-version</key>
+				<string>1.0.0</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>title</key>
+				<string>XXXX App download</string>
+			</dict>
+		</dict>
+	</array>
 </dict>
-<dict>
-<key>kind</key>
-<string>display-image</string>
-<key>url</key>
-<string>http://10.1.222.60:8080/putao/image.57x57.png</string>
-</dict>
-<dict>
-<key>kind</key>
-<string>full-size-image</string>
-<key>url</key>
-<string>http://10.1.222.60:8080/putao/image.512x512.png</string>
-</dict>
+</plist>
+
