--- a/installIPA.plist
+++ b/installIPA.plist
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.yulegou.demo</string>
+				<string>com.zhuoyuehd.h</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>kind</key>
